--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   .jumbotron
-    h1 LoL Helper
+    .container-fluid
+      .row-fluid
+        .span7
+          h1.center A League of Legends Helper
+    
+
