--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,8 +1,13 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+//------------------------------------------------------------
+// Setup
+//------------------------------------------------------------
 
-a {
-  color: #00B7FF;
+//------------------------------------------------------------
+// Landing Page
+//------------------------------------------------------------
+
+.center {
+    margin: 0 auto;
+    float: none;
+    background-color: red;
 }
