--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.less')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    //- Styles
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href="/stylesheets/bootstrap.min.css")
+    //- JQuery
+    script(type="application/javascript", src="//code.jquery.com/jquery-2.1.3.min.js")
+    //- Bootstrap
+    script(type="application/javascript", src="javascripts/bootstrap.min.js")
   body
     block content
