Implemented basic landing page.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,13 +1,19 @@
+@blue: #008cba;
+@gray: #e7e7e7;
+@green: #43ac6a;
+@light-blue: #5bc0de;
+@orange: #e99002;
+@red: #f04124;
+
 //------------------------------------------------------------
-// Setup
+// Useful classes
 //------------------------------------------------------------
+
+.text-center    { text-align: center; }
+.text-white     { color: white; }
+
+.margin-top-md { margin-top: 10em; }
 
 //------------------------------------------------------------
 // Landing Page
 //------------------------------------------------------------
-
-.center {
-    margin: 0 auto;
-    float: none;
-    background-color: red;
-}
