Added extra head in layout and updated index.jade.

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,6 +25,6 @@ block content
                   li #[a(href="#") Jungle]
                   li #[a(href="#") Carry]
                   li #[a(href="#") Support]
-              button.btn.btn-primary(type="button") Search 
-        .col-md-3 
+              button.btn.btn-primary.search(type="button") Search 
+        .col-md-3
 
