--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,5 +10,6 @@ html
     script(type="application/javascript", src="/javascripts/jquery-2.1.3.min.js")
     //- Bootstrap
     script(type="application/javascript", src="/javascripts/bootstrap.min.js")
+    block extraHead
   body
     block content
