Added route for summoner icons.

--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -2,8 +2,9 @@ extends layout
 
 block extraHead
   link(rel="stylesheet", type="text/css", href="stylesheets/analysis.css")
-  script(type="application/javascript", src="javascripts/progressbar.min.js")
-  script(type="application/javascript", src="javascripts/jquery.knob.min.js")
+  script(type="application/javascript", src="/javascripts/progressbar.min.js")
+  script(type="application/javascript", src="/javascripts/jquery.knob.min.js")
+  script(type="application/javascript", src="/javascripts/main.js")
 
 block content
   .title
