Basic analysis page.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -12,7 +12,8 @@
 .text-center    { text-align: center; }
 .text-white     { color: white; }
 
-.margin-top-md { margin-top: 10em; }
+.margin-top-8  { margin-top: 8em; }
+.margin-top-10 { margin-top: 10em; }
 
 //------------------------------------------------------------
 // Landing Page
