--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -5,12 +5,29 @@ block extraHead
   script(type="application/javascript", src="/javascripts/progressbar.min.js")
   script(type="application/javascript", src="/javascripts/jquery.knob.min.js")
   script(type="application/javascript", src="/javascripts/main.js")
+  script(type="application/javascript", src="javascripts/analysis.js")
 
 block content
-  .title
-    .profile
-      .img
-      .name= username
-      .current-rank Bronze
-      .desired-rank Challenger
-    .dial
+  .title.container-fluid
+    .row-fluid
+      .col-md-offset-3.col-md-6.username
+        h1= username
+    .row-fluid
+      .col-md-offset-3.col-md-6
+        .curr-rank Bronze
+        .separator &nbsp;&rarr;&nbsp;
+        .next-rank Challenger
+    .row-fluid.margin-top-8
+      .col-md-offset-5.col-md-2
+        .dial
+
+  .fake-title
+  .container-fluid
+    .row-fluid
+      .module.col-md-4
+        p Hi
+      .module.col-md-4
+        p Hi
+      .module.col-md-4
+        p Hi
+
