--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
       .row-fluid
         .col-md-12
           h1.text-center So you want to be Challenger?
-      .row-fluid.margin-top-md
+      .row-fluid.margin-top-10
         .col-md-3
         .col-md-6
           .input-group
