main.js -> prediction.js.

--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -4,8 +4,8 @@ block extraHead
   link(rel="stylesheet", type="text/css", href="stylesheets/analysis.css")
   script(type="application/javascript", src="/javascripts/progressbar.min.js")
   script(type="application/javascript", src="/javascripts/jquery.knob.min.js")
-  script(type="application/javascript", src="/javascripts/main.js")
   script(type="application/javascript", src="javascripts/analysis.js")
+  script(type="application/javascript", src="/javascripts/prediction.js")
 
 block content
   .title.container-fluid
