Added code snippet of knob.

--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -19,7 +19,7 @@ block content
         .next-rank Challenger
     .row-fluid.margin-top-8
       .col-md-offset-5.col-md-2
-        .dial
+        input.dial(value="75")
 
   .fake-title
   .container-fluid
