--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,10 @@ block extraHead
 block content
   .jumbotron
     .container-fluid
-      .row-fluid
+      .row
         .col-md-12
           h1.text-center So you want to be Challenger?
-      .row-fluid.margin-top-10
+      .row.margin-top-2
         .col-md-3
         .col-md-6
           .input-group
