--- a/public/stylesheets/analysis.less
+++ b/public/stylesheets/analysis.less
@@ -41,7 +41,7 @@
 
         margin-top: 2em;
 
-        .col-md-4 div {
+        .module-column div {
             display: block !important;
             margin: 0 auto;
         }
